--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ djangorestframework = "^3.12.4"
 python-dotenv = "^0.17.0"
 requests = "^2.25.1"
 django-filter = "^2.4.0"
+django-heroku = "^0.3.1"
+dj-database-url = "^0.5.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
